--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "devops-demo",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node server.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -17,5 +17,10 @@
   "bugs": {
     "url": "https://github.com/shoddyshaman/f15-devops-demo/issues"
   },
-  "homepage": "https://github.com/shoddyshaman/f15-devops-demo#readme"
+  "homepage": "https://github.com/shoddyshaman/f15-devops-demo#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "rollbar": "^2.24.0"
+  }
 }
